--- a/.github/workflows/elt.yml
+++ b/.github/workflows/elt.yml
@@ -21,9 +21,14 @@ jobs:
     - name: 'Run Extract Transform'
       run: python main.py
 
+    - name: Get current date and time
+      id: date_time
+      run: echo "::set-output name=datetime::$(date +'%Y-%m-%d_%H-%M-%S')"
+
     - name: 'Upload a file to Google Drive'
       uses: willo32/google-drive-upload-action@v1
       with:
         target: './result/antananarivo_2020-11-17_to_2023-08-13.csv'
+        name: '${{ steps.date_time.outputs.datetime }}.csv'
         credentials: ${{ secrets.CREDENTIALS }}
         parent_folder_id: ${{ secrets.FOLDER_ID }}
